--- a/test/examples/simple.html
+++ b/test/examples/simple.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<script type="text/javascript" mamaged name="jquery" src="/bower_component/jquery/jquery.min.js"></script>
+		<script type="text/javascript" mamaged-bower name="jquery" src="/bower_component/jquery/jquery.min.js"></script>
 	</head>
 	<body>
 		
