--- a/test/examples/multi.html
+++ b/test/examples/multi.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<script type="text/javascript" mamaged-bower name="jquery" src="vendors/jquery/jquery.min.js"></script>
+		<script type="text/javascript" mamaged-bower name="lodash" src="vendors/lodash/lodash.min.js"></script>
 	</head>
 	<body>
 	</body>
